# SDL_remixer

./: .wikiheaders-options  CMakeLists.txt  README.md
.github/workflows/: main.yml
docs/: README-migration.md
include/SDL3_mixer/: SDL_mixer.h
src/: SDL_mixer.c  SDL_mixer.sym  SDL_mixer_internal.h  SDL_mixer_loader.h  SDL_mixer_metadata_tags.c  SDL_mixer_spatialization.c  decoder_aiff.c  decoder_au.c  decoder_drflac.c  decoder_drmp3.c  decoder_flac.c  decoder_fluidsynth.c  decoder_gme.c  decoder_mpg123.c  decoder_ogg.c  decoder_opus.c  decoder_raw.c  decoder_sinewave.c  decoder_stb_vorbis.c  decoder_timidity.c  decoder_voc.c  decoder_vorbis.c  decoder_wav.c  decoder_wavpack.c  decoder_xmp.c  make.sh  sample.aiff  sample.flac  sample.opus  sample.voc  sample.wv  testmixer.c  testspatialization.c
src/stb_vorbis/: stb_vorbis.h
